# AML-Project

./: .gitignore  README.md  pyproject.toml
src/: crawl_graph.py  crawl_syllabuses.py  data.py  finetune.ipynb  finetune_v2.ipynb  llms.ipynb  parse.py  streamlit_app.py  syllabus_generator.py  template.py  utils.py
