[tool.poetry]
name = "aml_project"
version = "0.1.0"
description = ""
authors = ["Andrey Palaev <a.palaev@innopolis.university>",
           "Mikhail Rudakov <m.rudakov@innopolis.university>",
           "Dinislam Gabitov <d.gabitov@innopolis.university>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp310-cp310-linux_x86_64.whl"}
transformers = "^4.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"